--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       href="https://fonts.googleapis.com/css2?family=Kay+Pho+Du:wght@400;500;600;700&family=Playwrite+DE+Grund:wght@100..400&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../CSS/styles.css" />
+    <link rel="stylesheet" href="CSS/styles.css">
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fresh Foods Loyalty Program!</title>
