--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap"
       rel="stylesheet"
     />
-
     <link
       href="https://fonts.googleapis.com/css2?family=Kay+Pho+Du:wght@400;500;600;700&family=Playwrite+DE+Grund:wght@100..400&display=swap"
       rel="stylesheet"
@@ -26,7 +25,7 @@
             <h1>Welcome to Fresh Foods Loyalty Programme</h1>
           </div>
           <img
-            src="../Images/freshFoodsBanner.png"
+            src="Images/FreshFoodsBanner.png"
             alt="Fresh Foods Banner"
             id="bannerImage"
           />
@@ -34,17 +33,17 @@
         <div class="fruitStacks">
           <div class="leftFruitStack">
             <img
-              src="../Images/Fruit/Apple.png"
+              src="Images/Fruit/Apple.png"
               alt="Image of Apple"
               width="150"
             />
             <img
-              src="../Images/Fruit/Banana.png"
+              src="Images/Fruit/Banana.png"
               alt="Image of Banana"
               width="150"
             />
             <img
-              src="../Images/Fruit/Lychee.png"
+              src="Images/Fruit/Lychee.png"
               alt="Image of a Lychee"
               width="150"
             />
@@ -52,17 +51,17 @@
 
           <div class="rightFruitStack">
             <img
-              src="../Images/Fruit/Orange.png"
+              src="Images/Fruit/Orange.png"
               alt="Image of an Orange"
               width="150"
             />
             <img
-              src="../Images/Fruit/Pear.png"
+              src="Images/Fruit/Pear.png"
               alt="Image of a Pear"
               width="150"
             />
             <img
-              src="../Images/Fruit/Pineapple.png"
+              src="Images/Fruit/Pineapple.png"
               alt="Image of a Pineapple"
               width="150"
             />
@@ -72,7 +71,7 @@
         <div class="logoIcon">
           <a href="index.html">
             <img
-              src="../Images/FreshFoodsIcon.png"
+              src="Images/FreshFoodsIcon.png"
               alt="Icon for Fresh Foods"
             />
           </a>
