--- a/support.html
+++ b/support.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Kay+Pho+Du:wght@400;500;600;700&family=Playwrite+DE+Grund:wght@100..400&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../CSS/styles.css" />
+    <link rel="stylesheet" href="CSS/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fresh Foods Support</title>
@@ -27,13 +27,13 @@
           <div class="logoIcon">
             <a href="index.html">
               <img
-                src="../Images/FreshFoodsIcon.png"
+                src="Images/FreshFoodsIcon.png"
                 alt="Icon for Fresh Foods"
               />
             </a>
           </div>
           <img
-            src="../Images/freshFoodsBanner.png"
+            src="Images/freshFoodsBanner.png"
             alt="Fresh Foods Banner"
             id="bannerImage"
           />
@@ -42,34 +42,34 @@
         <div class="fruitStacks">
           <div class="leftFruitStack">
             <img
-              src="../Images/Fruit/Apple.png"
+              src="Images/Fruit/Apple.png"
               alt="Image of Apple"
               width="150"
             />
             <img
-              src="../Images/Fruit/Banana.png"
+              src="Images/Fruit/Banana.png"
               alt="Image of Banana"
               width="150"
             />
             <img
-              src="../Images/Fruit/Lychee.png"
+              src="Images/Fruit/Lychee.png"
               alt="Image of a Lychee"
               width="150"
             />
           </div>
           <div class="rightFruitStack">
             <img
-              src="../Images/Fruit/Orange.png"
+              src="Images/Fruit/Orange.png"
               alt="Image of an Orange"
               width="150"
             />
             <img
-              src="../Images/Fruit/Pear.png"
+              src="Images/Fruit/Pear.png"
               alt="Image of a Pear"
               width="150"
             />
             <img
-              src="../Images/Fruit/Pineapple.png"
+              src="Images/Fruit/Pineapple.png"
               alt="Image of a Pineapple"
               width="150"
             />
